fix overflow in .projects caused by .projects__mobile-slider

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -116,6 +116,7 @@
     }
 
     .projects__mobile-slider {
+        display: block;
         position: relative;
         margin-top: 75px;
     }
